--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.10",
-    "@angular/cli": "~13.3.10",
+    "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "~13.2.7",
     "@types/jasmine": "~3.10.7",
     "@types/node": "^12.12.7",
