--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "bootstrap-icons": "^1.10.2",
     "mdb-angular-ui-kit": "^2.3.0",
+    "ngx-collapse": "0.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "ngx-collapse": "0.0.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.4",
