--- a/package.json
+++ b/package.json
@@ -10,37 +10,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
+    "@angular/animations": "~15.1.1",
+    "@angular/cdk": "^15.1.1",
+    "@angular/cli": "^15.1.2",
+    "@angular/common": "~15.1.1",
+    "@angular/compiler": "~15.1.1",
+    "@angular/core": "~15.2.0-next.1",
+    "@angular/forms": "~15.1.1",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "bootstrap-icons": "^1.10.2",
-    "mdb-angular-ui-kit": "^2.3.0",
-    "ngx-collapse": "0.0.3",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/material": "~15.2.0-next.1",
+    "@angular/platform-browser": "~15.1.1",
+    "@angular/platform-browser-dynamic": "~15.1.1",
+    "@angular/router": "~15.1.1",
+    "bootstrap-icons": "^1.10.3",
+    "mdb-angular-ui-kit": "^4.0.0",
+    "ngx-collapse": "~0.0.4",
+    "ngx-permissions": "^14.0.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.4.1",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.4",
-    "@angular/cli": "~13.2.4",
-    "@angular/compiler-cli": "~13.2.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "bootstrap": "^5.2.3",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "@angular-devkit/build-angular": "~15.1.2",
+    "@angular/compiler-cli": "~15.1.1",
+    "@types/jasmine": "~4.3.1",
+    "@types/node": "^18.11.18",
+    "bootstrap": "^5.3.0-alpha1",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.9.4"
   }
 }
