--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~15.1.1",
     "bootstrap-icons": "^1.10.3",
     "mdb-angular-ui-kit": "^4.0.0",
+    "ng-circle-progress": "^1.7.1",
     "ngx-bootstrap": "^10.2.0",
     "ngx-collapse": "~0.0.4",
     "ngx-permissions": "^14.0.0",
